--- a/src/components/projects-block/styles.scss
+++ b/src/components/projects-block/styles.scss
@@ -10,13 +10,13 @@
 
         .project-title {
             float: left;
-            font-size: 21px;
+            font-size: 18px;
         }
 
         .separator {
             float: left;
-            font-size: 17px;
-            margin: 2px 4px;
+            font-size: 18px;
+            margin: 0 4px;
         }
 
         .tech {
@@ -35,7 +35,7 @@
     .content {
         margin-top: 5px;
         padding-left: 20px;
-        font-size: 17px;
+        font-size: 16px;
         line-height: 1.1;
     }
 }
