--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,8 +12,8 @@
     }
 
     body {
-        font-weight: 200;
-        font-family: 'Helvetica Neue', 'Roboto', Arial, 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
+        font-weight: 300;
+        font-family: 'Roboto', sans-serif;
     }
 
     .light-text {
