--- a/src/components/experience-block/styles.scss
+++ b/src/components/experience-block/styles.scss
@@ -19,12 +19,21 @@
             }
 
             .position {
-                font-size: 20px;
+                font-size: 22px;
             }
 
             .subtitle {
                 font-size: 16px;
                 margin-bottom: 4px;
+            }
+
+            .subtime {
+                font-size: 12px;
+                color: $grey;
+            }
+
+            .location {
+
             }
 
             .tech {
@@ -45,7 +54,7 @@
 
         >li {
             margin-top: 10px;
-            font-size: 17px;
+            font-size: 16px;
             line-height: 1.1;
 
             ul {
