--- a/src/components/icon/styles.scss
+++ b/src/components/icon/styles.scss
@@ -53,6 +53,10 @@ $shadow-blur: 8px;
     background-image: url('../../images/yahoo.png');
 }
 
+.yahoo-2019 {
+    background-image: url('../../images/yahoo_2019.jpeg');
+}
+
 .rave {
     background-image: url('../../images/rave.png');
 }
