--- a/src/components/experience-block/styles.scss
+++ b/src/components/experience-block/styles.scss
@@ -48,7 +48,7 @@
         }
     }
 
-    .content {
+    >ul {
         padding-left: 30px;
         list-style-type: disc;
 
@@ -57,11 +57,11 @@
             font-size: 16px;
             line-height: 1.1;
 
-            ul {
+            >ul {
                 padding-left: 15px;
                 list-style-type: circle;
 
-                li {
+                >li {
                     margin-top: 10px;
                 }
             }
