update image quality and fix lint

--- a/src/components/icon/styles.scss
+++ b/src/components/icon/styles.scss
@@ -74,7 +74,7 @@ $shadow-blur: 8px;
 }
 
 .microsoft {
-    background-image: url('../../images/microsoft.jpg');
+    background-image: url('../../images/microsoft_box.png');
     border-radius: 0px;
 }
 
