--- a/src/components/projects-block/styles.scss
+++ b/src/components/projects-block/styles.scss
@@ -16,19 +16,27 @@
         .separator {
             float: left;
             font-size: 18px;
-            margin: 0 4px;
+            margin: 0.5px 4px;
+        }
+
+        .type {
+            float: left;
+            margin: 3px 0;
+            font-size: 14px;
+            color: $grey;
         }
 
         .tech {
             float: left;
             margin: 3px 0;
-            font-size: 16px;
+            font-size: 14px;
             color: $grey;
         }
 
         .time {
             float: right;
             font-size: 16px;
+            margin: 1.5px 0px;
         }
     }
 
