--- a/src/components/experience-block/styles.scss
+++ b/src/components/experience-block/styles.scss
@@ -22,6 +22,10 @@
                 font-size: 20px;
             }
 
+            .team {
+                font-size: 14px;
+            }
+
             .subtitle {
                 font-size: 16px;
                 margin-bottom: 4.5px;
