fix incorrectly parsed text in pdf format

--- a/src/components/skills-block/styles.scss
+++ b/src/components/skills-block/styles.scss
@@ -13,8 +13,8 @@
             margin: 6px 4px;
 
             &:before {
-                content: '>';
-                margin-right: 6px;
+                content: '-';
+                margin-right: 8px;
             }
         }
 
