--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,7 +11,11 @@ a {
 }
 
 body {
+    letter-spacing: 0.1px;
     font-weight: 300;
+    // font-family: 'Source Sans Pro', sans-serif;
+    // font-family: 'Lato', sans-serif;
+    // font-family: 'Open-Sans', sans-serif;
     font-family: 'Roboto', sans-serif;
 }
 
