Refactor float to flexbox

--- a/src/components/projects-block/styles.scss
+++ b/src/components/projects-block/styles.scss
@@ -7,34 +7,37 @@
     margin-bottom: 16px;
 
     .project-header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
 
-        .project-title {
-            float: left;
-            font-size: 20px;
-        }
+        .project-meta {
+            display: flex;
+            flex-direction: row;
 
-        .separator {
-            float: left;
-            font-size: 18px;
-            margin: 0.5px 4px;
-        }
+            .project-title {
+                font-size: 20px;
+            }
 
-        .type {
-            float: left;
-            margin: 3px 0;
-            font-size: 14px;
-            color: $grey;
-        }
+            .separator {
+                font-size: 18px;
+                margin: 0.5px 4px;
+            }
 
-        .tech {
-            float: left;
-            margin: 3px 0;
-            font-size: 14px;
-            color: $grey;
+            .type {
+                margin: 3px 0;
+                font-size: 14px;
+                color: $grey;
+            }
+
+            .tech {
+                margin: 3px 0;
+                font-size: 14px;
+                color: $grey;
+            }
         }
 
         .time {
-            float: right;
             font-size: 16px;
             margin: 1.5px 0px;
         }
