--- a/src/components/experience-block/styles.scss
+++ b/src/components/experience-block/styles.scss
@@ -6,13 +6,13 @@
     margin-bottom: 30px;
 
     .experience-header {
-        display: block;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
         border-bottom: $light-grey dashed 1px;
         padding-bottom: 5px;
 
         .desc {
-            float: left;
-
             .position-title {
                 font-size: 24px;
                 margin-bottom: 4px;
@@ -40,11 +40,6 @@
                 font-size: 15px;
                 color: $grey;
             }
-        }
-
-        .icon {
-            float: right;
-            opacity: 1;
         }
     }
 
