--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -2,13 +2,14 @@
 @import '../../styles/variables';
 
 .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     width: 100%;
     height: $headerHeight;
     border-bottom: 2px solid $grey;
 
     .main-desc {
-        float: left;
-
         .name {
             font-size: 73px;
             margin-bottom: 10px;
@@ -20,7 +21,6 @@
     }
 
     .contact-links {
-        float: right;
         width: $sideWidth;
         margin-top: -12px;
         padding-left: 12px;
