--- a/src/components/resume-container/styles.scss
+++ b/src/components/resume-container/styles.scss
@@ -4,4 +4,10 @@
     width: $containerWidth;
     height: $containerHeight;
     padding: $containerPaddingV $containerPaddingH;
+    overflow: hidden;
+
+    .main-container {
+        display: flex;
+        flex-direction: row;
+    }
 }
