--- a/src/components/experience-block/styles.scss
+++ b/src/components/experience-block/styles.scss
@@ -23,7 +23,8 @@
             }
 
             .team {
-                font-size: 15px;
+                font-size: 14px;
+                color: #777;
             }
 
             .subtitle {
@@ -33,7 +34,7 @@
 
             .subtime {
                 font-size: 12px;
-                color: $grey;
+                color: #707070;
             }
 
             .tech {
