--- a/src/components/experience-block/styles.scss
+++ b/src/components/experience-block/styles.scss
@@ -48,6 +48,11 @@
         padding-left: 30px;
         list-style-type: disc;
 
+        a {
+            text-decoration: underline;
+            text-decoration-color: $thin-dark-blue;
+        }
+
         >li {
             margin-top: 11px;
             font-size: 16px;
